<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/change_health_message"
            android:text=""
            android:id="@+id/edit_health" />

        <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_health"
            android:onClick="saveHealth"/>

        <Button
            android:text="@string/save_and_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_and_reset"
            android:onClick="saveAndReset" />
    </LinearLayout>

</LinearLayout>