<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false">


    <LinearLayout
        android:background="@drawable/border_top"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/character_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:layout_weight="7"
            android:maxLength="15"
            android:onClick="changeName"
            android:text="CharName"
            android:textAlignment="center"
            android:textIsSelectable="true"
            android:textSize="36sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"
            android:onClick="showPopup"
            android:tint="@android:color/darker_gray"
            android:background="@android:color/transparent"
            android:id="@+id/character_settings"
            android:scaleX=".75"
            android:scaleY=".75"
            android:paddingTop="15sp"
            android:layout_weight="1"
            android:contentDescription="settings gear"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom">

        <TextView
            android:text="@string/base_health_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/base_health_message"
            android:paddingStart="10sp"
            android:paddingEnd="0sp"
            android:layout_weight="0.10"
            android:textSize="18sp" />

        <TextView

            android:id="@+id/health_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.82"
            android:onClick="editHealth"
            android:paddingBottom="10sp"
            android:text="BaseHealth"
            android:textAlignment="textStart"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:text="@string/current_health_message"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:text="CurrentHealth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/current_health_text_view"
            android:textAlignment="center"
            android:textSize="36sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="android:attr/buttonBarStyle">

            <Button
                android:text="@string/minus_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minus_one_button"
                android:layout_weight="1"
                android:onClick="minusOne"
                style="android:attr/buttonBarButtonStyle"/>

            <Button
                android:text="@string/plus_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plus_one_button"
                android:layout_weight="1"
                android:onClick="plusOne"
                style="android:attr/buttonBarButtonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="android:attr/buttonBarStyle">

            <Button
                android:text="@string/minus_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minus_five_button"
                android:layout_weight="1"
                android:onClick="minusFive"
                style="android:attr/buttonBarButtonStyle" />

            <Button
                android:text="@string/plus_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plus_five_button"
                android:layout_weight="1"
                android:onClick="plusFive"
                style="android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="android:attr/buttonBarStyle">

            <Button
                android:text="@string/minus_ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minus_ten_button"
                android:layout_weight="1"
                android:onClick="minusTen"
                style="android:attr/buttonBarButtonStyle" />

            <Button
                android:text="@string/plus_ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plus_ten_button"
                android:layout_weight="1"
                android:onClick="plusTen"
                style="android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <Button
            android:text="@string/reset_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset_health_button"
            android:textAlignment="center"
            android:onClick="resetHealth" />

        <Button
            android:text="@string/log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_button"
            android:onClick="viewLog" />

    </LinearLayout>

</LinearLayout>


